# MoturHeadPlatform

./: .gitignore  README.md
libs/motoros_common/: CMakeLists.txt  package.xml
libs/motoros_common/include/motoros_common/: lib_motoros_common.hpp  visibility_control.h
libs/motoros_common/src/: lib_motoros_common.cpp
libs/motoros_interfaces/: CMakeLists.txt  package.xml
libs/motoros_interfaces/msg/: SetPlatformPwmValue.msg  SetPlatformSpeed.msg
